--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     <ul class="menu">
       <li class="active"><a href="index.html">Home</a></li>
       <li><a href="about.html">About us</a></li>
-      <li><a href="bussiness.html">Business Contacts</a></li>
+      <li><a href="business.html">Business Contacts</a></li>
       <li><a href="news.html">News</a></li>
       <li><a href="contact.html">Contact us</a></li>
     </ul>
     <button class="sign-in">Sign In/Sign Up</button>
   </div>
-  
+
   <img src="./images/coverpage.png" class="banner" />
   <div class="products">
     <img src="./images/products.png" class="products-img" />
